--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/senne-berden-a4243156/"
+  linkedin         : "senne-berden-a4243156"
   orcid            : "http://orcid.org/0000-0002-6473-5757"
   pinterest        :
   soundcloud       :
